feat: implementacao do JWT, correcoes de rotas e fluxo de perfis por Role